# ctf-solver-agent

./: .coverage  .gitignore  GPT_PRO_REVIEW.md  SESSION_PROMPT.md  pyproject.toml
docs/superpowers/plans/: 2026-06-12-ctf-solver-agent.md
docs/superpowers/specs/: 2026-06-12-ctf-solver-agent-design.md
sandbox/: Dockerfile  sandbox-tools.txt
src/ctf_solver/: __init__.py  cli.py  config.py  events.py  hint_server.py  prompts.py  session_state.py  tracing.py  writeup.py
src/ctf_solver/collaboration/: loop_detect.py  message_bus.py
src/ctf_solver/providers/: __init__.py  base.py  claude.py  codex.py  zai.py
src/ctf_solver/sandbox/: __init__.py  docker.py  host.py
src/ctf_solver/solver/: __init__.py  coordinator.py  solver_base.py  swarm.py
src/ctf_solver/tools/: core.py  flag.py  vision.py
src/ctf_solver/tracking/: circuit_breaker.py  cost_tracker.py
src/ctf_solver/tui/: app.py
src/ctf_solver/tui/screens/: __init__.py  logs.py
src/ctf_solver/tui/widgets/: coordinator_view.py  cost_bar.py  input_bar.py  message_log.py  solver_panel.py
tests/: test_circuit_breaker.py  test_cli.py  test_config.py  test_coordinator.py  test_cost_tracker.py  test_docker_integration.py  test_events.py  test_flag_pattern.py  test_hint_server.py  test_loop_detect.py  test_message_bus.py  test_prompts.py  test_providers.py  test_sandbox.py  test_solver_base.py  test_swarm.py  test_tools_core.py  test_tracing.py  test_vision.py  test_writeup.py
