[project]
name = "ctf-solver-agent"
version = "0.1.0"
description = "Multi-model CTF solver agent with Docker sandboxing and TUI dashboard"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiodocker>=0.24",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "genai-prices>=0.0",
]

[project.scripts]
ctf-solve = "ctf_solver.cli:main"
ctf-msg = "ctf_solver.cli:send_message"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
toml = ["tomli>=2.0"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctf_solver"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "C4", "PTH"]
ignore = ["E501", "SIM105", "SIM115", "PTH123"]

[tool.ruff.lint.isort]
known-first-party = ["ctf_solver"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
